--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ body {
   width: 550px;
   background-color: white;
   opacity: 80%;
+  border-radius: 3px;
 }
 
 .maps {
+  border-radius: 3px;
   width: 700px;
   background-color: black;
   opacity: 95%;
