added hero image for responsiveness

--- a/style.css
+++ b/style.css
@@ -1,22 +1,35 @@
-body {
+/* body {
   background-image: url("https://scontent-atl3-1.xx.fbcdn.net/v/t1.6435-9/228388224_1257317024698543_5359068878446118312_n.jpg?_nc_cat=101&ccb=1-4&_nc_sid=a26aad&_nc_ohc=mUtp018ucFIAX9O2ABJ&_nc_ht=scontent-atl3-1.xx&oh=17aecf90121afcdb9a497f834ff00b2a&oe=6137DBE7");
+} */
+
+.hero-image {
+  background-image: url("https://scontent-atl3-1.xx.fbcdn.net/v/t1.6435-9/228388224_1257317024698543_5359068878446118312_n.jpg?_nc_cat=101&ccb=1-4&_nc_sid=a26aad&_nc_ohc=mUtp018ucFIAX9O2ABJ&_nc_ht=scontent-atl3-1.xx&oh=17aecf90121afcdb9a497f834ff00b2a&oe=6137DBE7");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .parking {
-  width: 42%;
+  width: 47%;
   background-color: white;
   opacity: 80%;
   border-radius: 3px;
   margin: 20px;
   padding: 10px;
+  max-width: fit-content;
+  position: relative;
 }
 
 .maps {
   border-radius: 3px;
-  width: 50%;
+  width: 45%;
   background-color: black;
   opacity: 95%;
   color: whitesmoke;
   margin: 20px;
   padding: 10px;
+  position: relative;
 }
