--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
   width: 47%;
   background-color: white;
   opacity: 80%;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
   border-radius: 3px;
   margin: 5px;
   padding: 10px;
