--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
 @media (max-width: 600px) {
   .maps {
     width: 100%;
+    font-size: 1.5rem;
   }
 }
 
@@ -47,6 +48,7 @@
   .parking {
     width: 80%;
     opacity: 92%;
+    font-size: 1.5rem;
   }
 }
 
