--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
 
 p {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: larger;
+  font-size: large;
 }
 .maps {
   border-radius: 3px;
